# aperture

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  meson.build  meson.options
.claude/agents/: coordinator.md  pr-reviewer.md  worker.md
.github/skills/add-preferences-section/: SKILL.md
.github/skills/build-and-run/: SKILL.md
.github/skills/roll-cimgui-wrap/: SKILL.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  test.yml
dep/: README.md  blake3.wrap  cJSON.wrap  cimgui.wrap  lcms2.wrap  nativefiledialog.wrap  tomlc99.wrap
dep/blake3/: blake3.c  blake3.h  meson.build
dep/cJSON/: meson.build
dep/cimgui/: meson.build
dep/glfw/: meson.build
dep/lcms2/: meson.build
dep/libjpeg-turbo/: meson.build
dep/libraw/: meson.build
dep/mbedtls/: meson.build
dep/nativefiledialog/: meson.build
dep/packagefiles/cJSON/: meson.build
dep/packagefiles/cimgui/: meson.build
dep/packagefiles/lcms2/: meson.build
dep/packagefiles/nativefiledialog/: meson.build
dep/packagefiles/tomlc99/: meson.build
dep/sqlite3/: meson.build
dep/tomlc99/: meson.build
dep/vulkan-headers/: meson.build
packaging/appimage/: build-appimage.sh
packaging/flatpak/: FLATHUB.md  io.github.octalium.aperture.yml
packaging/linux/: io.github.octalium.aperture.metainfo.xml.in  meson.build  release-date.py
packaging/linux/icons/: refresh.sh
packaging/macos/: Info.plist.in  README.md  build-app.sh  build-dmg.sh  fetch-sparkle.sh  generate-appcast.sh  meson.build
packaging/windows/: README.md  build-msi.ps1  build-zip.ps1  setup-deps.ps1
pkg/flatpak/: FLATHUB.md  io.github.octalium.aperture.yml
pkg/linux/: meson.build  post-install.sh
pkg/macos/: Info.plist.in  README.md  build-app.sh
pkg/metadata/: io.github.octalium.aperture.desktop.in  io.github.octalium.aperture.metainfo.xml.in  io.github.octalium.aperture.xml
pkg/windows/: README.md  build-msi.ps1  make-windows.ps1  setup-deps.ps1
pkg/windows/wix/: aperture.wxs
scripts/: debug_run.sh  refresh-sqlite3.sh
shaders/: ahd_select.comp  canvas.frag  canvas.vert  chromatic_aberration.comp  color.comp  color_grade.comp  crop.comp  demosaic.comp  denoise.comp  exposure.comp  grid.frag  lens_correction.comp  meson.build  orientation.comp  process.comp  profile.comp  profile_lut.comp  raw_passthrough.comp  sharpen.comp  sharpen_blur_h.comp  sharpen_gauss_combine.comp  tone_filmic.comp  vignette.comp  wb.comp
src/: main.c  meson.build
src/app/: about_modal.c  app.c  app.h  app_priv.h  canvas_tool.h  export_modal.c  grid_view.c  grid_view.h  jobs.c  jobs.h  layout_profiles.c  layout_profiles.h  menubar.c  menubar.h  meson.build  modals.c  modals.h  preferences_modal.c  root.c  root.h
src/color/: dcp.c  dcp.h  icc.c  icc.h  meson.build
src/core/: compat.h  dir.h  dir_posix.c  dir_windows.c  fs.c  fs.h  log.c  log.h  memstream.c  memstream.h  meson.build  random.c  random.h  thread.h  thread_posix.c  thread_windows.c  version.c  version.h  worker.c  worker.h
src/edit/: history.c  history.h  meson.build  stack.c  stack.h  stack_toml.c  stack_toml.h  viewport.c  viewport.h
src/gpu/: canvas.c  canvas.h  compute.c  compute.h  device.c  frame.c  gpu.c  gpu.h  gpu_internal.h  grid.c  grid.h  instance.c  meson.build  pipeline_graph.c  pipeline_graph.h  pipeline_graph_lut.c  pipeline_graph_priv.h  swapchain.c  texture.c  texture.h  window.c
src/io/: exif.c  exif.h  meson.build  raw.c  raw.h  raw_exts.h
src/metadata/: meson.build
src/modules/: chromatic_aberration.c  color.c  color_grade.c  crop.c  demosaic.c  denoise.c  encode.c  exif_writer.c  exif_writer.h  exposure.c  grain.c  hsl.c  lens_correction.c  lens_match.c  lens_match.h  meson.build  module.h  orientation.c  output_transfer.c  process.c  profile.c  raw_passthrough.c  registry.c  saturation.c  sharpen.c  tone.c  transform.c  vignette.c  wb.c  wb.h
src/net/: http.h  http_mbedtls.c  http_nsurlsession.m  http_winhttp.c  meson.build
src/output/: export.c  export.h  jpeg.c  jpeg.h  jpeg_error.h  meson.build  png.c  png.h  tiff.c  tiff.h
src/panels/: export_batch.c  export_destination.c  export_format.c  export_naming.c  export_presets.c  export_quality.c  libraries.c  library.c  library_empty_state.c  library_filter.c  library_groups.c  library_info.c  library_metadata.c  library_pipelines.c  library_sort_search.c  meson.build  panel_table.c  panels.h  photo_edit.c  photo_info.c  photo_keywords.c  photo_metadata.c  photo_viewport.c  registry.c
src/photo/: culling.c  culling.h  groups.h  keywords.c  keywords.h  meson.build  metadata.c  metadata.h  photo.c  photo.h  thumbnail.c  thumbnail.h
src/pipeline/: meson.build
src/shaders/: ahd_interp.comp  canvas.frag  canvas.vert  demosaic.comp  demosaic_adaptive.comp  demosaic_malvar.comp  embed_spv.py  exposure.comp  exposure_soft.comp  grain.comp  grid.vert  histogram.comp  hsl.comp  meson.build  output_transfer.comp  saturation.comp  tone.comp
src/sidecar/: meson.build  sidecar.c  sidecar.h
src/ui/: file_dialog.c  file_dialog.h  imgui.h  imgui_bridge.cpp  meson.build  modal_kbd.h  status.c  status.h  toast.c  toast.h
src/update/: check.c  check.h  manifest.c  manifest.h  meson.build  settings.c  settings.h  updater.c  updater.h  updater_flatpak.c  updater_macos.m
test/: meson.build
test/include/: aptest.h  aptest_modules.h  aptest_tmpdir.h
test/io/: exif_test.c  meson.build
test/modules/: meson.build  stack_pack_test.c
test/sidecar/: meson.build  sidecar_test.c
test/support/: aptest_modules.c
test/support/vulkan_stub/vulkan/: vulkan.h
tools/: embed_spv.py
